@@ -10,7 +10,7 @@
   <email>chuck@horde.org</email>
   <active>no</active>
  </lead>
- <date>2021-07-19</date>
+ <date>2021-07-20</date>
  <version>
   <release>3.0.0alpha6</release>
   <api>3.0.0alpha1</api>
@@ -21,7 +21,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
-* 
+* [rla] Upgraded to conform PSR-11 2.0.1 interfaces
+* |+
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -158,25 +159,6 @@
   </filelist>
  </phprelease>
  <changelog>
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
   <release>
    <version>
     <release>1.0.0alpha1</release>
@@ -477,7 +459,8 @@
    <date>2021-07-19</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
-* 
+* [rla] Upgraded to conform PSR-11 2.0.1 interfaces
+* |+
    </notes>
   </release>
  </changelog>
